--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
 MONGODB_URI=
 PORT=
-PRIVATE_KEY=
-PUBLIC_KEY=
 NODE_ENV=
 JWT_EXPIRES_IN="60"
 STRIPE_KEY=
 SUCCESS_URL=
 CANCEL_URL=
 STRIPE_WEBHOOK_SECRET=
+JWT_SECRET=
