--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "stripe": "^14.16.0"
+    "stripe": "^14.16.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-mongodb": "^5.1.1",
+    "winston-slack-webhook-transport": "^2.3.4",
+    "winston-transport": "^4.7.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
