--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@sentry/node": "^7.102.1",
+    "@sentry/profiling-node": "^7.102.1",
+    "@sentry/tracing": "^7.102.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
