--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^5.1.2",
     "@sentry/node": "^7.102.1",
     "@sentry/profiling-node": "^7.102.1",
     "@sentry/tracing": "^7.102.1",
@@ -35,6 +36,7 @@
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "helmet": "^7.1.0",
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "passport-jwt": "^4.0.1",
